syntax = "proto3";

package auth.v1;

service Authentication {
    rpc Login (LoginRequest) returns (LoginReply);
    rpc Logout (LogoutRequest) returns (LogoutReply);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginReply {
    string usertoken = 1;
}

message LogoutRequest {}
message LogoutReply {}
