syntax = "proto3";

package shop.v1;

service PetShop {
    rpc GetPets (GetPetsRequest) returns (GetPetsReply);
    rpc BuyPet (BuyPetRequest) returns (BuyPetReply);
}

message GetPetsRequest {}
message GetPetsReply {
    repeated Pet pets = 1;
}

message Pet {
    int64 id = 1;
    int32 age = 2;
    string name = 3;
}

message BuyPetRequest {
    int64 id = 1;
}
message BuyPetReply {}
